# advent-2022

./: LICENSE  README.md  pyproject.toml
.day00/: __main__.py  test_a.py
day01/: task_a.py  task_b.py  test_a.py  test_b.py
day02/: task_a.py  task_b.py  test_a.py  test_b.py
day03/: task_a.py  task_b.py  test_a.py  test_b.py
day04/: task_a.py  task_b.py  test_a.py  test_b.py
day05/: task_a.py  task_b.py  test_a.py  test_b.py
day06/: task_a.py  task_b.py  test_a.py  test_b.py
day07/: task_a.py  task_b.py  test_a.py  test_b.py
day08/: task_a.py  task_b.py  test_a.py  test_b.py
day09/: task_a.py  task_b.py  test_a.py  test_b.py
