[tool.poetry]
name = "advent-2022"
version = "0.1.0"
description = ""
authors = ["Olaf Gladis <olaf@gladis.org>"]
readme = "README.md"
packages = [{include = "advent_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
typer = "^0.7.0"
boltons = "^21.0.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
